force-app/main/default/objects/TASKRAY__Project_Task__c/TASKRAY__Project_Task__c.object-meta.xml
<CustomObject>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <label>TaskRay Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>