force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Archived__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>