force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Priority__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#DDDDDD</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <color>#CC6600</color>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#3333FF</color>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>