force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Repeat_Every__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Repeat_Every__c</fullName>
    <label>Repeat Every</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>