force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Repeat_Interval_Type__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
    <label>Repeat Interval Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Does not repeat</fullName>
                <default>true</default>
                <label>Does not repeat</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>