force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Repeat_Week_Days__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
    <label>Repeat Week Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>