force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__Status__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Status__c</fullName>
    <label>Deprecated (Do Not Use)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
                <label>Not Yet Started</label>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>