force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trAccountCommAccess__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trAccountCommAccess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to control record sharing with Community users that have license types which utilize Sharing Sets to determine record access.</description>
    <inlineHelpText>Used to grant access to Customer/External Accounts (Sharing Sets only).</inlineHelpText>
    <label>Account (Community Access)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TaskRay Tasks (Account (Community Access))</relationshipLabel>
    <relationshipName>TaskRay_External_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>