force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trActualDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trActualDuration__c</fullName>
    <description>Used to track the number of days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, including nonworking days.</description>
    <formula>IF( 
(TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days that it took to complete the task (includes nonworking days).</inlineHelpText>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>