force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trCompletedAheadOfSchedule2__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCompletedAheadOfSchedule2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track whether the task was completed before its scheduled Estimated End Date.</description>
    <inlineHelpText>Indicates whether a task was completed before its scheduled Estimated End Date.</inlineHelpText>
    <label>Completed Ahead of Schedule</label>
    <type>Checkbox</type>
</CustomField>