force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trDepOffset__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDepOffset__c</fullName>
    <label>Dependency Offset (Legacy Dependencies)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>