force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDuration__c</fullName>
    <formula>IF( 
(TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>