force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trHasScheduleConflict__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trHasScheduleConflict__c</fullName>
    <formula>TASKRAY__trLockDates__c &amp;&amp;
NOT(ISBLANK(TASKRAY__Dependent_On__c)) &amp;&amp;
TASKRAY__Deadline__c &lt;  TASKRAY__Dependent_On__r.TASKRAY__Deadline__c</formula>
    <label>Legacy Dependencies Schedule Conflict</label>
    <type>Checkbox</type>
</CustomField>