force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trHideUntilOffset__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trHideUntilOffset__c</fullName>
    <label>Hide Until (Days Before Start)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>