force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trIsMilestone__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trIsMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>