force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trLockDates__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trLockDates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents scheduling updates.</description>
    <label>Lock Dates</label>
    <type>Checkbox</type>
</CustomField>