force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trNumberOfTimesBlocked__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNumberOfTimesBlocked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to track the number of times the task was marked as blocked.</description>
    <inlineHelpText>Tracks the number of times the task was marked as blocked.</inlineHelpText>
    <label>Number of Times Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>