force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trPredecessorTasksIncomplete__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trPredecessorTasksIncomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Predecessor Tasks Incomplete</label>
    <type>Checkbox</type>
</CustomField>