force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trProjectSortOrder__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trProjectSortOrder__c</fullName>
    <label>Project Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>