force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trScheduleConflict__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trScheduleConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Conflict</label>
    <type>Checkbox</type>
</CustomField>