force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trStartDate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trStartDate__c</fullName>
    <description>Used to track the date of when the task is scheduled to start.</description>
    <inlineHelpText>Date of when the task is scheduled to start.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>