force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trTaskGroup__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TASKRAY__Project__c</field>
            <operation>equals</operation>
            <valueField>TASKRAY__trTaskGroup__c.TASKRAY__Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
    <relationshipLabel>TaskRay Tasks</relationshipLabel>
    <relationshipName>TaskRay_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>