force-app/main/default/objects/TASKRAY__Project_Task__c/fields/TASKRAY__trWasTaskEverBlocked__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trWasTaskEverBlocked__c</fullName>
    <description>Used to track whether a task was ever blocked.</description>
    <formula>TASKRAY__trNumberOfTimesBlocked__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether a task was ever blocked.</inlineHelpText>
    <label>Was Task Ever Blocked?</label>
    <type>Checkbox</type>
</CustomField>