force-app/main/default/objects/TASKRAY__Project_Task__c/validationRules/TASKRAY__Prevent_Complete_If_Dependent_Incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__Prevent_Complete_If_Dependent_Incomplete</fullName>
    <active>false</active>
    <description>This validation rule will prevent the completion of a task when its predecessor task is incomplete.</description>
    <errorConditionFormula>ISCHANGED(TASKRAY__trCompleted__c) &amp;&amp;
TASKRAY__trCompleted__c  = TRUE &amp;&amp;  ((NOT(ISNULL(TASKRAY__Dependent_On__c)) &amp;&amp;  TASKRAY__Dependent_On__r.TASKRAY__trCompleted__c = false) || TASKRAY__trPredecessorTasksIncomplete__c)</errorConditionFormula>
    <errorMessage>This task cannot be completed because it has a predecessor task which is not complete.</errorMessage>
</ValidationRule>