force-app/main/default/objects/TASKRAY__Project_Task__c/listViews/TASKRAY__AllProjectTasks.listView-meta.xml
<ListView>
    <fullName>TASKRAY__AllProjectTasks</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__Project__c</columns>
    <columns>TASKRAY__trTaskGroup__c</columns>
    <columns>TASKRAY__Deadline__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Project Tasks</label>
</ListView>